--- a/Jenkins/k8s/ngrok-secret.yaml
+++ b/Jenkins/k8s/ngrok-secret.yaml
@@ -5,4 +5,4 @@ metadata:
 type: Opaque
 data:
   # Replace YOUR_NGROK_AUTHTOKEN with your base64 encoded ngrok auth token
-  auth-token: INPUT_TOKEN
+  auth-token: MnI0VjBWNlN4TjhQOXA5d0pZb3hNeU5vU0dFZ3dJZ0d3YjF3bG5n
