--- a/Jenkins/pipeline/Jenkinsfile
+++ b/Jenkins/pipeline/Jenkinsfile
@@ -8,71 +8,54 @@ pipeline {
                   labels:
                     app: jenkins-agent
                 spec:
-                  nodeSelector:
-                    node-type: jenkins
                   containers:
+                  - name: docker
+                    image: docker:latest
+                    command:
+                    - cat
+                    tty: true
+                    volumeMounts:
+                    - mountPath: /var/run/docker.sock
+                      name: docker-sock
                   - name: kubectl
                     image: bitnami/kubectl:latest
                     command:
                     - cat
                     tty: true
+                  volumes:
+                  - name: docker-sock
+                    hostPath:
+                      path: /var/run/docker.sock
             '''
         }
     }
-
-    environment {
-        DOCKER_IMAGE = 'redrayn/wargame'
-        KUBE_CONFIG = credentials('kube-config')
-    }
-
     stages {
-        stage('Check Docker Image Update') {
+        stage('Checkout') {
             steps {
-                container('kubectl') {
-                    script {
-                        def imageInfo = sh(
-                            script: '''
-                                curl -s "https://hub.docker.com/v2/repositories/redrayn/wargame/tags/latest"
-                            ''',
-                            returnStdout: true
-                        )
-                        
-                        def currentDigest = sh(
-                            script: '''
-                                kubectl get deployment wargame-web -o=jsonpath='{.spec.template.spec.containers[0].image}'
-                            ''',
-                            returnStdout: true
-                        )
-
-                        if (imageInfo.contains(currentDigest)) {
-                            echo "이미지가 최신 상태입니다."
-                            currentBuild.result = 'SUCCESS'
-                            return
-                        }
-                        
-                        echo "새로운 이미지가 감지되었습니다. 업데이트를 진행합니다."
-                        env.UPDATE_REQUIRED = 'true'
-                    }
+                git branch: 'main',
+                    url: 'https://github.com/kimbeomjun90/devsecops_full.git'
+            }
+        }
+        stage('Build') {
+            steps {
+                container('docker') {
+                    sh 'docker build -t wargame-web:latest Web/'
                 }
             }
         }
-
-        stage('Deploy Updated Image') {
-            when {
-                environment name: 'UPDATE_REQUIRED', value: 'true'
-            }
+        stage('Deploy') {
             steps {
                 container('kubectl') {
                     sh '''
+                        kubectl apply -f k8s/db-init-configmap.yaml
+                        kubectl apply -f k8s/db-deployment.yaml
                         kubectl apply -f k8s/web-deployment.yaml
                         kubectl apply -f k8s/services.yaml
-                        kubectl rollout status deployment/wargame-web
                     '''
                 }
             }
         }
     }
-
     post {
         success {
             echo '파이프라인이 성공적으로 완료되었습니다.'
