--- a/Jenkins/k8s/jenkins-pv.yaml
+++ b/Jenkins/k8s/jenkins-pv.yaml
@@ -17,8 +17,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jenkins-pvc
+  namespace: devops
 spec:
-  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
