--- a/Jenkins/pipeline/Jenkinsfile
+++ b/Jenkins/pipeline/Jenkinsfile
@@ -9,53 +9,65 @@ pipeline {
                     app: jenkins-agent
                 spec:
                   containers:
-                  - name: docker
-                    image: docker:latest
-                    command:
-                    - cat
-                    tty: true
-                    volumeMounts:
-                    - mountPath: /var/run/docker.sock
-                      name: docker-sock
                   - name: kubectl
                     image: bitnami/kubectl:latest
                     command:
                     - cat
                     tty: true
-                  volumes:
-                  - name: docker-sock
-                    hostPath:
-                      path: /var/run/docker.sock
             '''
         }
     }
+    
+    environment {
+        DOCKER_IMAGE = 'redrayn/wargame'  // 수정된 도커허브 이미지 주소
+    }
+    
     stages {
-        stage('Checkout') {
+        stage('Check Docker Image Update') {
             steps {
-                git branch: 'main',
-                    url: 'https://github.com/kimbeomjun90/devsecops_full.git'
-            }
-        }
-        stage('Build') {
-            steps {
-                container('docker') {
-                    sh 'docker build -t wargame-web:latest Web/'
+                container('kubectl') {
+                    script {
+                        // 도커허브에서 최신 이미지 정보 확인
+                        def imageInfo = sh(
+                            script: """
+                                curl -s "https://hub.docker.com/v2/repositories/${DOCKER_IMAGE}/tags/latest"
+                            """,
+                            returnStdout: true
+                        )
+                        
+                        // 현재 배포된 이미지 정보 확인
+                        def currentImage = sh(
+                            script: 'kubectl get deployment wargame-web -o=jsonpath=\'{.spec.template.spec.containers[0].image}\'',
+                            returnStdout: true
+                        ).trim()
+                        
+                        // 이미지가 다르면 업데이트 필요
+                        if (!imageInfo.contains(currentImage)) {
+                            env.UPDATE_REQUIRED = 'true'
+                            echo "새로운 이미지가 감지되었습니다. 업데이트를 진행합니다."
+                        } else {
+                            echo "이미지가 최신 상태입니다."
+                        }
+                    }
                 }
             }
         }
-        stage('Deploy') {
+        
+        stage('Deploy Updated Image') {
+            when {
+                environment name: 'UPDATE_REQUIRED', value: 'true'
+            }
             steps {
                 container('kubectl') {
                     sh '''
-                        kubectl apply -f k8s/db-init-configmap.yaml
-                        kubectl apply -f k8s/db-deployment.yaml
                         kubectl apply -f k8s/web-deployment.yaml
-                        kubectl apply -f k8s/services.yaml
+                        kubectl rollout status deployment/wargame-web
                     '''
                 }
             }
         }
     }
+    
     post {
         success {
             echo '파이프라인이 성공적으로 완료되었습니다.'
@@ -65,3 +77,4 @@ pipeline {
         }
     }
 }
+
