Update Jenkins 대규모

--- a/Jenkins/k8s/ngrok-secret.yaml
+++ b/Jenkins/k8s/ngrok-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ngrok-credentials
+  namespace: devops
 type: Opaque
 data:
-  # Replace YOUR_NGROK_AUTHTOKEN with your base64 encoded ngrok auth token
   auth-token: MnI0VjBWNlN4TjhQOXA5d0pZb3hNeU5vU0dFZ3dJZ0d3YjF3bG5n
