--- a/SonarQube/k8s/sonarqube-service.yaml
+++ b/SonarQube/k8s/sonarqube-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins
+  name: sonarqube
   namespace: devops
 spec:
   type: NodePort
   ports:
-  - port: 8080
-    targetPort: 8080
-    nodePort: 30800
+  - port: 9000
+    targetPort: 9000
+    nodePort: 30900
   selector:
-    app: jenkins
+    app: sonarqube
