--- a/Kubernetes/kind-config.yaml
+++ b/Kubernetes/kind-config.yaml
@@ -50,8 +50,8 @@ nodes:
   # - CI/CD 파이프라인 관리 웹 UI
   # - 빌드 및 배포 모니터링
   # - 호스트 접근: http://localhost:8080
-  - containerPort: 30800
-    hostPort: 8080
+  - containerPort: 8080
+    hostPort: 30800
     listenAddress: "0.0.0.0"
     protocol: TCP
 
@@ -64,6 +64,14 @@ nodes:
     listenAddress: "0.0.0.0"
     protocol: TCP
 
+  # SonarQube 웹 인터페이스 포트
+  # - Elasticsearch 데이터 시각화 웹 UI
+  # - 호스트 접근: http://localhost:30601
+  - containerPort: 9000
+    hostPort: 30900
+    listenAddress: "0.0.0.0"
+    protocol: TCP
+
 # 워커 노드 1: 웹서버
 - role: worker
   labels:
@@ -73,8 +81,9 @@ nodes:
 # 워커 노드 2: Jenkins
 - role: worker
   labels:
+    kubernetes.io/hostname: devsecops-cluster-worker2
     node-type: jenkins
-    purpose: jenkins
+    purpose: jenkins-sonarqube
 
 # 워커 노드 3: 백업 DB
 - role: worker
