--- a/SonarQube/k8s/sonarqube-pv.yaml
+++ b/SonarQube/k8s/sonarqube-pv.yaml
@@ -2,16 +2,21 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: sonarqube-pv
-  labels:
-    type: local
 spec:
-  storageClassName: standard
   capacity:
-    storage: 10Gi
+    storage: 1Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/data/sonarqube"
+    path: /data/sonarqube
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - devsecops-cluster-worker2
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -19,9 +24,8 @@ metadata:
   name: sonarqube-pvc
   namespace: devops
 spec:
-  storageClassName: standard
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi 
+      storage: 1Gi 
