--- a/SonarQube/k8s/sonarqube-service.yaml
+++ b/SonarQube/k8s/sonarqube-service.yaml
@@ -3,11 +3,15 @@ kind: Service
 metadata:
   name: sonarqube
   namespace: devops
+  labels:
+    app: sonarqube
 spec:
   type: NodePort
   ports:
   - port: 9000
     targetPort: 9000
     nodePort: 30900
+    name: sonarqube
+    protocol: TCP
   selector:
     app: sonarqube
