--- a/Jenkins/k8s/jenkins-service.yaml
+++ b/Jenkins/k8s/jenkins-service.yaml
@@ -3,11 +3,20 @@ kind: Service
 metadata:
   name: jenkins
   namespace: devops
+  labels:
+    app: jenkins
 spec:
   type: NodePort
   ports:
   - port: 8080
     targetPort: 8080
     nodePort: 30800
+    name: jenkins
+    protocol: TCP
+  - port: 50000
+    targetPort: 50000
+    nodePort: 30850
+    name: jnlp
+    protocol: TCP
   selector:
     app: jenkins
