--- a/Kubernetes/kind-config.yaml
+++ b/Kubernetes/kind-config.yaml
@@ -48,9 +48,8 @@ nodes:
 
   # Jenkins 웹 인터페이스 포트
   # - CI/CD 파이프라인 관리 웹 UI
-  # - 빌드 및 배포 모니터링
-  # - 호스트 접근: http://localhost:8080
-  - containerPort: 8080
+  # - 호스트 접근: http://localhost:30800
+  - containerPort: 30800
     hostPort: 30800
     listenAddress: "0.0.0.0"
     protocol: TCP
@@ -58,16 +57,16 @@ nodes:
   # Jenkins JNLP 에이전트 포트
   # - Jenkins 워커 노드 연결
   # - 분산 빌드 에이전트 통신
-  # - 호스트 접근: localhost:50000
+  # - 호스트 접근: localhost:30850
   - containerPort: 30850
-    hostPort: 50000
+    hostPort: 30850
     listenAddress: "0.0.0.0"
     protocol: TCP
 
   # SonarQube 웹 인터페이스 포트
-  # - Elasticsearch 데이터 시각화 웹 UI
-  # - 호스트 접근: http://localhost:30601
-  - containerPort: 9000
+  # - SonarQube 코드 품질 분석 웹 UI
+  # - 호스트 접근: http://localhost:30900
+  - containerPort: 30900
     hostPort: 30900
     listenAddress: "0.0.0.0"
     protocol: TCP
