--- a/Jenkins/pipeline/Jenkinsfile
+++ b/Jenkins/pipeline/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
     
     environment {
-        DOCKER_IMAGE = 'redrayn/wargame'
+        DOCKER_IMAGE = 'de4l3r/wargame'
         SONAR_HOST_URL = 'http://sonarqube:9000'
     }
     
@@ -10,7 +10,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 // GitHub에서 소스코드 가져오기
-                git 'https://github.com/kimbeomjun90/devsecops_full.git'
+                git 'https://github.com/DE4L-3R/full-project.git'
             }
         }
         
